--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "valaxy-theme-yun": "0.26.3"
   },
   "devDependencies": {
+    "@types/glob": "^9.0.0",
     "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "typescript": "^5.9.2"
